force-app/main/default/objects/Instruction__c/Instruction__c.object-meta.xml
<CustomObject>
    <label>Instruction</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Instruction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>