force-app/main/default/objects/Instruction__c/fields/Funds_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Funds_Allocated__c</fullName>
    <label>Funds Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>