force-app/main/default/objects/Instruction__c/fields/Instruction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Notes__c</fullName>
    <label>Instruction Notes</label>
    <type>TextArea</type>
</CustomField>