force-app/main/default/objects/Instruction__c/fields/Regional_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Regional_Office_Code__c</fullName>
    <label>Regional Office Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regional_Office_Code</valueSetName>
    </valueSet>
</CustomField>