force-app/main/default/objects/Instruction__c/fields/Sponsorship_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Start_Date__c</fullName>
    <label>Sponsorship Start Date</label>
    <type>DateTime</type>
</CustomField>