force-app/main/default/objects/Instruction__c/validationRules/Funds_Transfer_are_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Funds_Transfer_are_Not_Allowed</fullName>
    <active>true</active>
    <description>Fundraising Campaigns are not allowed for Transfer Funds</description>
    <errorConditionFormula>ISPICKVAL(Type__c,&apos;Fund Transfer&apos;) &amp;&amp; Campaign__r.RecordType.DeveloperName =&apos;Departmental&apos;</errorConditionFormula>
    <errorMessage>Fund Transfer are not Allowed</errorMessage>
</ValidationRule>